# mediapipe

./: .gitignore  BUILD.bazel  WORKSPACE  intel_brew_deps.txt  package-lock.json  rick_notes.txt  rick_requirements.txt
mediapipe/: BUILD
mediapipe/MediaPipe.tulsiproj/: project.tulsiconf
mediapipe/calculators/: BUILD.bazel
mediapipe/calculators/core/: BUILD
mediapipe/calculators/image/: BUILD
mediapipe/calculators/tensor/: BUILD  inference_calculator_gl.cc  inference_calculator_gl_advanced.cc
mediapipe/calculators/util/: BUILD  association_calculator.proto
mediapipe/examples/ios/: bundle_id.bzl  provisioning_profile.mobileprovision
mediapipe/examples/ios/MPIrisTracker/: BUILD  MPIrisTracker.mm
mediapipe/examples/ios/handtrackinggpu/: BUILD
mediapipe/examples/ios/helloworld/: BUILD
mediapipe/examples/ios/holistictrackinggpu/: BUILD
mediapipe/examples/ios/objectdetectioncpu/: BUILD
mediapipe/examples/ios/objectdetectiongpu/: BUILD
mediapipe/examples/ios/presage_graph_mpiris/: BUILD  Info.plist  MPIrisTracker.h  MPIrisTracker.mm  MyCameraInputSource.mm  README
mediapipe/examples/ios/presage_graph_mpiris/graph/: BUILD  iris_tracking_gpu.pbtxt
mediapipe/examples/ios/presage_graph_mpiris/graph_jim/: BUILD_android  graph_HRRR_04_17_23.pbtxt  pose_landmark_gpu.pbtxt
mediapipe/framework/: BUILD  mediapipe_cc_test.bzl  subgraph.h  transitive_protos.bzl
mediapipe/framework/formats/: BUILD
mediapipe/framework/port/: BUILD  opencv_video_inc.h
mediapipe/framework/profiler/: BUILD
mediapipe/framework/tool/: BUILD  mediapipe_graph.bzl  mediapipe_proto.bzl  mediapipe_transitive_library.bzl
mediapipe/gpu/: BUILD
mediapipe/java/com/google/mediapipe/: mediapipe_aar.bzl
mediapipe/java/com/google/mediapipe/components/: BUILD
mediapipe/java/com/google/mediapipe/framework/: BUILD  PacketGetter.java
mediapipe/java/com/google/mediapipe/framework/jni/: BUILD  packet_getter_jni.cc  packet_getter_jni.h
mediapipe/modules/face_detection/: face_detection.pbtxt  face_detection.proto  face_detection_full_range.pbtxt  face_detection_full_range_cpu.pbtxt  face_detection_short_range.pbtxt  face_detection_short_range_cpu.pbtxt  face_detection_short_range_gpu.pbtxt
mediapipe/modules/face_landmark/: BUILD  face_landmark_cpu.pbtxt  face_landmark_front_cpu.pbtxt  face_landmark_front_cpu_image.pbtxt  face_landmark_front_gpu.pbtxt  face_landmark_gpu.pbtxt
mediapipe/modules/pose_detection/: pose_detection_cpu.pbtxt  pose_detection_gpu.pbtxt
mediapipe/modules/pose_landmark/: pose_landmark_by_roi_cpu.pbtxt  pose_landmark_by_roi_gpu.pbtxt  pose_landmark_cpu.pbtxt  pose_landmark_gpu.pbtxt
mediapipe/tasks/java/com/google/mediapipe/tasks/: mediapipe_tasks_aar.bzl
mediapipe/util/: BUILD
mediapipe/util/tflite/: tflite_gpu_runner.cc  tflite_gpu_runner.h
