# Copyright 2022 The MediaPipe Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

licenses(["notice"])

exports_files([
    "LICENSE",
    "tsconfig.json",
    "package.json",
    "yarn.lock",
])

pkg_filegroup(
    name = "mediapipe_headers",
    srcs = [
        "//mediapipe/calculators/core:headers",
        "//mediapipe/framework:headers",
        "//mediapipe/framework/formats:headers",
        "//mediapipe/framework/port:headers",
        "//mediapipe/framework/tool:headers",
        "//mediapipe/gpu:headers",
    ],
    prefix = "include",
)

filegroup(
    name = "mediapipe_libraries",
    srcs = [
        "//mediapipe/calculators/core:mediapipe_calculators_core",
        "//mediapipe/framework:mediapipe_calculator_framework",
        "//mediapipe/gpu:mediapipe_gpu",
    ],
)

pkg_zip(
    name = "mediapipe_package",
    srcs = [
        "LICENSE",
        ":mediapipe_headers",
        ":mediapipe_libraries",
    ],
    out = "mediapipe.zip",
)
